welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: value update is not a member of Boolean
        estSurBiscuit()=vubiscuit
        ^