welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vubiscuit=false
  while(!vubiscuit){
    
    for (j<- 1 to 6){
      if(estSurBiscuit()){
        estSurBiscuit()=vubiscuit
      }
      
    	avance()
    }
    	for (k<-1 to 6){
      	recule()
      }
        
    	droite()
   	 	avance()
    	gauche()
      
    		if (estSurBiscuit()==true){
        	vubiscuit == true
        }
        
   }
    	
    
  
 	return true;


  
  
  
}